// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Movies 1`] = `
<div>
  <div
    class="colA"
  >
    <h2>
      Movies 
    </h2>
    <ul>
      <li>
        <span>
          Hello
        </span>
         
        <i
          class="react-contextmenu-wrapper fas fa-list"
          style="cursor: pointer;"
        />
        <nav
          class="react-contextmenu"
          role="menu"
          style="position: fixed; opacity: 0; pointer-events: none;"
          tabindex="-1"
        >
          <div
            aria-disabled="false"
            class="react-contextmenu-item"
            role="menuitem"
            tabindex="-1"
          >
            <span
              class="unselectable"
            >
              Play in Plex
            </span>
          </div>
          <div
            aria-disabled="false"
            class="react-contextmenu-item"
            role="menuitem"
            tabindex="-1"
          >
            Open in IMDB
          </div>
          <div
            aria-disabled="false"
            class="react-contextmenu-item"
            role="menuitem"
            tabindex="-1"
          >
            Added by: 
            David
          </div>
        </nav>
         
      </li>
    </ul>
  </div>
</div>
`;

exports[`Progress complex 1`] = `<div />`;

exports[`Progress complex 2`] = `
<div>
  <progress
    title="50% (Unknown time remaining)"
    value="0.5"
  />
</div>
`;

exports[`Progress complex 3`] = `
<div>
  <progress
    title="75% (Unknown time remaining)"
    value="0.75"
  />
</div>
`;

exports[`Progress simple 1`] = `<div />`;

exports[`Progress simple 2`] = `
<div>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-check-circle fa-w-16 "
    data-icon="check-circle"
    data-prefix="fas"
    focusable="false"
    role="img"
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`Progress simple 3`] = `
<div>
  <progress
    title="50% (6 minutes remaining)"
    value="0.5"
  />
</div>
`;

exports[`TVShows 1`] = `
<div>
  <div>
    <div
      class="colB"
    >
      <h2>
        TV Shows 
      </h2>
      <div>
        <h3>
          Title
           
          <i
            class="react-contextmenu-wrapper fas fa-list"
            style="cursor: pointer;"
          />
          <nav
            class="react-contextmenu"
            role="menu"
            style="position: fixed; opacity: 0; pointer-events: none;"
            tabindex="-1"
          >
            
            <div
              aria-disabled="false"
              class="react-contextmenu-item"
              role="menuitem"
              tabindex="-1"
            >
              Search
            </div>
          </nav>
        </h3>
        <div
          class="Collapsible"
        >
          <span
            class="Collapsible__trigger is-open"
          >
            <h4>
              Season 
              1
               
               
              <a
                href="/select/1/season/1"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-search fa-w-16 "
                  data-icon="search"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                    fill="currentColor"
                  />
                </svg>
              </a>
            </h4>
          </span>
          <div
            class="Collapsible__contentOuter"
            style="height: auto; transition: none; overflow: hidden;"
          >
            <div
              class="Collapsible__contentInner"
            >
              <ol />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
